antlr/generated/LangParser.cpp

// Generated from Lang.g4 by ANTLR 4.13.2


#include "LangListener.h"
#include "LangVisitor.h"

#include "LangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LangParserStaticData final {
  LangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LangParserStaticData(const LangParserStaticData&) = delete;
  LangParserStaticData(LangParserStaticData&&) = delete;
  LangParserStaticData& operator=(const LangParserStaticData&) = delete;
  LangParserStaticData& operator=(LangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag langParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<LangParserStaticData> langParserStaticData = nullptr;

void langParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (langParserStaticData != nullptr) {
    return;
  }
#else
  assert(langParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LangParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "blockStatement", "varDecl", "functionDecl", 
      "ifStatement", "whileStatement", "printStatement", "returnStatement", 
      "assignmentStatement", "parameterList", "expressionList", "expression", 
      "ternaryExpression", "logicalOr", "logicalAnd", "equality", "relational", 
      "additive", "multiplicative", "unary", "postfix", "primary"
    },
    std::vector<std::string>{
      "", "'let'", "'const'", "'fn'", "'return'", "'if'", "'else'", "'while'", 
      "'break'", "'continue'", "'print'", "'typeof'", "'true'", "'false'", 
      "", "", "", "", "'+'", "'-'", "'*'", "'/'", "'%'", "'--'", "'=='", 
      "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'!'", "'='", 
      "'+='", "'-='", "'*='", "'/='", "'=>'", "'\\u003F'", "':'", "'('", 
      "')'", "'{'", "'}'", "';'", "','"
    },
    std::vector<std::string>{
      "", "LET", "CONST", "FN", "RETURN", "IF", "ELSE", "WHILE", "BREAK", 
      "CONTINUE", "PRINT", "TYPEOF", "TRUE", "FALSE", "ID", "INT", "DOUBLE", 
      "STRING", "PLUS", "MINUS", "MUL", "DIV", "MOD", "DEC", "EQ", "NEQ", 
      "LT", "GT", "LE", "GE", "AND", "OR", "NOT", "ASSIGN", "ADD_ASSIGN", 
      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "ARROW", "QUESTION", "COLON", 
      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  langParserStaticData = std::move(staticData);
}

}

LangParser::LangParser(TokenStream *input) : LangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LangParser::LangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *langParserStaticData->atn, langParserStaticData->decisionToDFA, langParserStaticData->sharedContextCache, options);
}

LangParser::~LangParser() {
  delete _interpreter;
}

const atn::ATN& LangParser::getATN() const {
  return *langParserStaticData->atn;
}

std::string LangParser::getGrammarFileName() const {
  return "Lang.g4";
}

const std::vector<std::string>& LangParser::getRuleNames() const {
  return langParserStaticData->ruleNames;
}

const dfa::Vocabulary& LangParser::getVocabulary() const {
  return langParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LangParser::getSerializedATN() const {
  return langParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

LangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LangParser::ProgramContext::EOF() {
  return getToken(LangParser::EOF, 0);
}

std::vector<LangParser::StatementContext *> LangParser::ProgramContext::statement() {
  return getRuleContexts<LangParser::StatementContext>();
}

LangParser::StatementContext* LangParser::ProgramContext::statement(size_t i) {
  return getRuleContext<LangParser::StatementContext>(i);
}


size_t LangParser::ProgramContext::getRuleIndex() const {
  return LangParser::RuleProgram;
}

void LangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void LangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any LangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

LangParser::ProgramContext* LangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LangParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 10999420420030) != 0)) {
      setState(46);
      statement();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(LangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

LangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LangParser::StatementContext::getRuleIndex() const {
  return LangParser::RuleStatement;
}

void LangParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ContinueStmtContext ------------------------------------------------------------------

tree::TerminalNode* LangParser::ContinueStmtContext::CONTINUE() {
  return getToken(LangParser::CONTINUE, 0);
}

tree::TerminalNode* LangParser::ContinueStmtContext::SEMI() {
  return getToken(LangParser::SEMI, 0);
}

LangParser::ContinueStmtContext::ContinueStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::ContinueStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterContinueStmt(this);
}
void LangParser::ContinueStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitContinueStmt(this);
}

std::any LangParser::ContinueStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitContinueStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfStmtContext ------------------------------------------------------------------

LangParser::IfStatementContext* LangParser::IfStmtContext::ifStatement() {
  return getRuleContext<LangParser::IfStatementContext>(0);
}

LangParser::IfStmtContext::IfStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::IfStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStmt(this);
}
void LangParser::IfStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStmt(this);
}

std::any LangParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintStmtContext ------------------------------------------------------------------

LangParser::PrintStatementContext* LangParser::PrintStmtContext::printStatement() {
  return getRuleContext<LangParser::PrintStatementContext>(0);
}

tree::TerminalNode* LangParser::PrintStmtContext::SEMI() {
  return getToken(LangParser::SEMI, 0);
}

LangParser::PrintStmtContext::PrintStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::PrintStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintStmt(this);
}
void LangParser::PrintStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintStmt(this);
}

std::any LangParser::PrintStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitPrintStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStmtContext ------------------------------------------------------------------

LangParser::ExpressionContext* LangParser::ExprStmtContext::expression() {
  return getRuleContext<LangParser::ExpressionContext>(0);
}

tree::TerminalNode* LangParser::ExprStmtContext::SEMI() {
  return getToken(LangParser::SEMI, 0);
}

LangParser::ExprStmtContext::ExprStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::ExprStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprStmt(this);
}
void LangParser::ExprStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprStmt(this);
}

std::any LangParser::ExprStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitExprStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileStmtContext ------------------------------------------------------------------

LangParser::WhileStatementContext* LangParser::WhileStmtContext::whileStatement() {
  return getRuleContext<LangParser::WhileStatementContext>(0);
}

LangParser::WhileStmtContext::WhileStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::WhileStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileStmt(this);
}
void LangParser::WhileStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileStmt(this);
}

std::any LangParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarDeclStmtContext ------------------------------------------------------------------

LangParser::VarDeclContext* LangParser::VarDeclStmtContext::varDecl() {
  return getRuleContext<LangParser::VarDeclContext>(0);
}

tree::TerminalNode* LangParser::VarDeclStmtContext::SEMI() {
  return getToken(LangParser::SEMI, 0);
}

LangParser::VarDeclStmtContext::VarDeclStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::VarDeclStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclStmt(this);
}
void LangParser::VarDeclStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclStmt(this);
}

std::any LangParser::VarDeclStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitVarDeclStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakStmtContext ------------------------------------------------------------------

tree::TerminalNode* LangParser::BreakStmtContext::BREAK() {
  return getToken(LangParser::BREAK, 0);
}

tree::TerminalNode* LangParser::BreakStmtContext::SEMI() {
  return getToken(LangParser::SEMI, 0);
}

LangParser::BreakStmtContext::BreakStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::BreakStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBreakStmt(this);
}
void LangParser::BreakStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBreakStmt(this);
}

std::any LangParser::BreakStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitBreakStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignStmtContext ------------------------------------------------------------------

LangParser::AssignmentStatementContext* LangParser::AssignStmtContext::assignmentStatement() {
  return getRuleContext<LangParser::AssignmentStatementContext>(0);
}

tree::TerminalNode* LangParser::AssignStmtContext::SEMI() {
  return getToken(LangParser::SEMI, 0);
}

LangParser::AssignStmtContext::AssignStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::AssignStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignStmt(this);
}
void LangParser::AssignStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignStmt(this);
}

std::any LangParser::AssignStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitAssignStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BlockStmtContext ------------------------------------------------------------------

LangParser::BlockStatementContext* LangParser::BlockStmtContext::blockStatement() {
  return getRuleContext<LangParser::BlockStatementContext>(0);
}

LangParser::BlockStmtContext::BlockStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::BlockStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockStmt(this);
}
void LangParser::BlockStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockStmt(this);
}

std::any LangParser::BlockStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitBlockStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncDeclStmtContext ------------------------------------------------------------------

LangParser::FunctionDeclContext* LangParser::FuncDeclStmtContext::functionDecl() {
  return getRuleContext<LangParser::FunctionDeclContext>(0);
}

LangParser::FuncDeclStmtContext::FuncDeclStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::FuncDeclStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDeclStmt(this);
}
void LangParser::FuncDeclStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDeclStmt(this);
}

std::any LangParser::FuncDeclStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitFuncDeclStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStmtContext ------------------------------------------------------------------

LangParser::ReturnStatementContext* LangParser::ReturnStmtContext::returnStatement() {
  return getRuleContext<LangParser::ReturnStatementContext>(0);
}

tree::TerminalNode* LangParser::ReturnStmtContext::SEMI() {
  return getToken(LangParser::SEMI, 0);
}

LangParser::ReturnStmtContext::ReturnStmtContext(StatementContext *ctx) { copyFrom(ctx); }

void LangParser::ReturnStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStmt(this);
}
void LangParser::ReturnStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStmt(this);
}

std::any LangParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}
LangParser::StatementContext* LangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, LangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LangParser::VarDeclStmtContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(54);
      varDecl();
      setState(55);
      match(LangParser::SEMI);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<LangParser::FuncDeclStmtContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(57);
      functionDecl();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<LangParser::IfStmtContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(58);
      ifStatement();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<LangParser::WhileStmtContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(59);
      whileStatement();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<LangParser::PrintStmtContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(60);
      printStatement();
      setState(61);
      match(LangParser::SEMI);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<LangParser::ReturnStmtContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(63);
      returnStatement();
      setState(64);
      match(LangParser::SEMI);
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<LangParser::BreakStmtContext>(_localctx);
      enterOuterAlt(_localctx, 7);
      setState(66);
      match(LangParser::BREAK);
      setState(67);
      match(LangParser::SEMI);
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<LangParser::ContinueStmtContext>(_localctx);
      enterOuterAlt(_localctx, 8);
      setState(68);
      match(LangParser::CONTINUE);
      setState(69);
      match(LangParser::SEMI);
      break;
    }

    case 9: {
      _localctx = _tracker.createInstance<LangParser::BlockStmtContext>(_localctx);
      enterOuterAlt(_localctx, 9);
      setState(70);
      blockStatement();
      break;
    }

    case 10: {
      _localctx = _tracker.createInstance<LangParser::AssignStmtContext>(_localctx);
      enterOuterAlt(_localctx, 10);
      setState(71);
      assignmentStatement();
      setState(72);
      match(LangParser::SEMI);
      break;
    }

    case 11: {
      _localctx = _tracker.createInstance<LangParser::ExprStmtContext>(_localctx);
      enterOuterAlt(_localctx, 11);
      setState(74);
      expression();
      setState(75);
      match(LangParser::SEMI);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockStatementContext ------------------------------------------------------------------

LangParser::BlockStatementContext::BlockStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LangParser::BlockStatementContext::getRuleIndex() const {
  return LangParser::RuleBlockStatement;
}

void LangParser::BlockStatementContext::copyFrom(BlockStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BlockContext ------------------------------------------------------------------

tree::TerminalNode* LangParser::BlockContext::LBRACE() {
  return getToken(LangParser::LBRACE, 0);
}

tree::TerminalNode* LangParser::BlockContext::RBRACE() {
  return getToken(LangParser::RBRACE, 0);
}

std::vector<LangParser::StatementContext *> LangParser::BlockContext::statement() {
  return getRuleContexts<LangParser::StatementContext>();
}

LangParser::StatementContext* LangParser::BlockContext::statement(size_t i) {
  return getRuleContext<LangParser::StatementContext>(i);
}

LangParser::BlockContext::BlockContext(BlockStatementContext *ctx) { copyFrom(ctx); }

void LangParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}
void LangParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

std::any LangParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}
LangParser::BlockStatementContext* LangParser::blockStatement() {
  BlockStatementContext *_localctx = _tracker.createInstance<BlockStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, LangParser::RuleBlockStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<LangParser::BlockContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(LangParser::LBRACE);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 10999420420030) != 0)) {
      setState(80);
      statement();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    match(LangParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

LangParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LangParser::VarDeclContext::ID() {
  return getToken(LangParser::ID, 0);
}

tree::TerminalNode* LangParser::VarDeclContext::ASSIGN() {
  return getToken(LangParser::ASSIGN, 0);
}

LangParser::ExpressionContext* LangParser::VarDeclContext::expression() {
  return getRuleContext<LangParser::ExpressionContext>(0);
}

tree::TerminalNode* LangParser::VarDeclContext::LET() {
  return getToken(LangParser::LET, 0);
}

tree::TerminalNode* LangParser::VarDeclContext::CONST() {
  return getToken(LangParser::CONST, 0);
}


size_t LangParser::VarDeclContext::getRuleIndex() const {
  return LangParser::RuleVarDecl;
}

void LangParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void LangParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


std::any LangParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

LangParser::VarDeclContext* LangParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, LangParser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    _la = _input->LA(1);
    if (!(_la == LangParser::LET

    || _la == LangParser::CONST)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(89);
    match(LangParser::ID);
    setState(90);
    match(LangParser::ASSIGN);
    setState(91);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

LangParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LangParser::FunctionDeclContext::FN() {
  return getToken(LangParser::FN, 0);
}

tree::TerminalNode* LangParser::FunctionDeclContext::ID() {
  return getToken(LangParser::ID, 0);
}

tree::TerminalNode* LangParser::FunctionDeclContext::LPAREN() {
  return getToken(LangParser::LPAREN, 0);
}

tree::TerminalNode* LangParser::FunctionDeclContext::RPAREN() {
  return getToken(LangParser::RPAREN, 0);
}

LangParser::BlockStatementContext* LangParser::FunctionDeclContext::blockStatement() {
  return getRuleContext<LangParser::BlockStatementContext>(0);
}

LangParser::ParameterListContext* LangParser::FunctionDeclContext::parameterList() {
  return getRuleContext<LangParser::ParameterListContext>(0);
}


size_t LangParser::FunctionDeclContext::getRuleIndex() const {
  return LangParser::RuleFunctionDecl;
}

void LangParser::FunctionDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDecl(this);
}
